# libsfz

./: CMakeLists.txt  README  TODO
src/: CMakeLists.txt  sfz.cpp  sfz.h
